Testcase cleanup (#192)
Signed-off-by: John Eberhard <jeber@us.ibm.com>